K8s/service.yml
kind: Service
apiVersion: v1
metadata: 
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
    # for outer world to connect
      port: 80
      targetPort: 80
  # Service hai types like :- node port, clusterip, load balancer, externalip, etc 
  type: ClusterIP
